[gd_scene load_steps=18 format=3 uid="uid://b04ndj6vfchjy"]

[ext_resource type="Script" path="res://Managers/WaveManager.gd" id="1_nthec"]
[ext_resource type="Script" path="res://Managers/CharacterManager.gd" id="2_oprt2"]
[ext_resource type="Script" path="res://Managers/RoundManager.gd" id="3_8bhs1"]
[ext_resource type="Script" path="res://Managers/AbilityManager.gd" id="4_22qxp"]
[ext_resource type="FontFile" uid="uid://dbn5ru6k8442x" path="res://GUI/kenvector_future_thin.ttf" id="5_cs4gk"]
[ext_resource type="Script" path="res://Managers/ShopManager.gd" id="6_xb8t3"]
[ext_resource type="Script" path="res://Managers/MapManager.gd" id="7_dk7ij"]
[ext_resource type="PackedScene" uid="uid://df2c8lkmxid82" path="res://Maps/Tiles/Arena_1/Arena_1.tscn" id="8_byxa3"]
[ext_resource type="Script" path="res://Managers/CombatManager.gd" id="9_e0x4p"]
[ext_resource type="PackedScene" uid="uid://bo7pvdl0hpuri" path="res://Abilities/Utility/burn_effect.tscn" id="10_kb10s"]
[ext_resource type="PackedScene" uid="uid://dg2iyxhbtp8jk" path="res://Abilities/Utility/freeze_effect.tscn" id="11_nn64g"]
[ext_resource type="PackedScene" uid="uid://e4iw4b160x30" path="res://GUI/combat_text.tscn" id="12_0lxen"]
[ext_resource type="Texture2D" uid="uid://bc8xpsv4uuehc" path="res://Sprites/black.png" id="13_ddefq"]
[ext_resource type="Texture2D" uid="uid://bcpcpicdwbcik" path="res://Sprites/wall.png" id="14_wb1in"]
[ext_resource type="Script" path="res://Units/Utility/UI Scripts/health_bar.gd" id="15_htdb3"]
[ext_resource type="Script" path="res://Managers/InteractionManager.gd" id="16_j1ijh"]

[sub_resource type="Theme" id="Theme_xtgj3"]
Panel/styles/panel = null

[node name="Main" type="Node"]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="Environment" type="Node" parent="CanvasModulate"]

[node name="Units" type="Node" parent="CanvasModulate"]

[node name="WaveManager" type="Node" parent="CanvasModulate"]
script = ExtResource("1_nthec")

[node name="Waves" type="Node" parent="CanvasModulate/WaveManager"]

[node name="CharacterManager" type="Node" parent="CanvasModulate"]
script = ExtResource("2_oprt2")

[node name="RoundManager" type="Node" parent="CanvasModulate"]
script = ExtResource("3_8bhs1")

[node name="AbilityManager" type="Node" parent="CanvasModulate"]
script = ExtResource("4_22qxp")

[node name="Abilities" type="Node" parent="CanvasModulate/AbilityManager"]

[node name="Augments" type="Node" parent="CanvasModulate/AbilityManager"]

[node name="UI" type="Node" parent="CanvasModulate/AbilityManager"]

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasModulate/AbilityManager/UI"]

[node name="choiceList" type="ItemList" parent="CanvasModulate/AbilityManager/UI/CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_cs4gk")
theme_override_font_sizes/font_size = 11
auto_height = true
same_column_width = true

[node name="showButton" type="Button" parent="CanvasModulate/AbilityManager/UI/CanvasLayer"]
visible = false
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("5_cs4gk")
theme_override_font_sizes/font_size = 11
text = "Show Choices"

[node name="ShopManager" type="Node" parent="CanvasModulate"]
script = ExtResource("6_xb8t3")

[node name="UI" type="CanvasLayer" parent="CanvasModulate/ShopManager"]

[node name="Panel" type="PanelContainer" parent="CanvasModulate/ShopManager/UI"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(400, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_xtgj3")

[node name="Title" type="Label" parent="CanvasModulate/ShopManager/UI/Panel"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="shopList" type="ItemList" parent="CanvasModulate/ShopManager/UI/Panel"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 1
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_cs4gk")
theme_override_font_sizes/font_size = 11
allow_reselect = true
auto_height = true

[node name="BuyButton" type="Button" parent="CanvasModulate/ShopManager/UI/Panel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("5_cs4gk")
theme_override_font_sizes/font_size = 11
text = "Buy"

[node name="SellButton" type="Button" parent="CanvasModulate/ShopManager/UI/Panel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("5_cs4gk")
theme_override_font_sizes/font_size = 11
text = "Sell"

[node name="MapManager" type="Node" parent="CanvasModulate"]
script = ExtResource("7_dk7ij")
town_file = "res://Maps/town.txt"
arena_1_scene = ExtResource("8_byxa3")

[node name="CombatManager" type="Node" parent="CanvasModulate"]
script = ExtResource("9_e0x4p")
burn_effect = ExtResource("10_kb10s")
freeze_effect = ExtResource("11_nn64g")
combat_text = ExtResource("12_0lxen")

[node name="UI" type="CanvasLayer" parent="CanvasModulate/CombatManager" groups=["UI"]]

[node name="ProgressBar" type="TextureProgressBar" parent="CanvasModulate/CombatManager/UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_top = 2.0
offset_right = -87.0
offset_bottom = 130.0
grow_horizontal = 2
scale = Vector2(3.35723, 0.232902)
texture_under = ExtResource("13_ddefq")
texture_progress = ExtResource("14_wb1in")
tint_under = Color(1, 1, 1, 0.419608)
script = ExtResource("15_htdb3")

[node name="UI" type="CanvasLayer" parent="CanvasModulate"]

[node name="InteractionManager" type="Node" parent="CanvasModulate"]
script = ExtResource("16_j1ijh")

[node name="Panel" type="Panel" parent="CanvasModulate/InteractionManager"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -14.0
offset_right = 44.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasModulate/InteractionManager/Panel"]
layout_mode = 0
offset_right = 89.0
offset_bottom = 36.0
theme_override_fonts/normal_font = ExtResource("5_cs4gk")
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[center]Press 'E' to interact.[center]"

[connection signal="get_units" from="CanvasModulate/WaveManager" to="CanvasModulate/MapManager" method="_on_get_units"]
[connection signal="start_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/MapManager" method="_on_wave_manager_start_wave"]
[connection signal="start_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/CombatManager" method="_on_start_wave"]
[connection signal="stop_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/RoundManager" method="_on_stop_wave"]
[connection signal="stop_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/CombatManager" method="_on_stop_wave"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/RoundManager" method="_on_character_selected"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/AbilityManager" method="_on_character_selected"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/ShopManager" method="_on_character_selected"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/MapManager" method="_on_character_selected"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/CombatManager" method="_on_character_selected"]
[connection signal="start_round_manager" from="CanvasModulate/CharacterManager" to="CanvasModulate/RoundManager" method="_on_start_round_manager"]
[connection signal="next_choice" from="CanvasModulate/RoundManager" to="CanvasModulate/AbilityManager" method="_on_next_choice"]
[connection signal="next_shop" from="CanvasModulate/RoundManager" to="CanvasModulate/ShopManager" method="_on_next_shop"]
[connection signal="next_shop" from="CanvasModulate/RoundManager" to="CanvasModulate/MapManager" method="_on_next_shop"]
[connection signal="next_wave" from="CanvasModulate/RoundManager" to="CanvasModulate/WaveManager" method="_on_next_wave"]
[connection signal="next_wave" from="CanvasModulate/RoundManager" to="CanvasModulate/MapManager" method="_on_round_manager_next_wave"]
[connection signal="start_encounter" from="CanvasModulate/RoundManager" to="CanvasModulate/WaveManager" method="_on_round_manager_start_encounter"]
[connection signal="start_singleplayer" from="CanvasModulate/RoundManager" to="CanvasModulate/MapManager" method="_on_round_manager_start_singleplayer"]
[connection signal="picked" from="CanvasModulate/AbilityManager" to="CanvasModulate/RoundManager" method="_on_ability_manager_picked"]
[connection signal="item_clicked" from="CanvasModulate/AbilityManager/UI/CanvasLayer/choiceList" to="CanvasModulate/AbilityManager" method="_on_choice_list_item_clicked"]
[connection signal="pressed" from="CanvasModulate/AbilityManager/UI/CanvasLayer/showButton" to="CanvasModulate/AbilityManager" method="_on_button_pressed"]
[connection signal="shop_closed" from="CanvasModulate/ShopManager" to="CanvasModulate/RoundManager" method="_on_shop_closed"]
[connection signal="item_selected" from="CanvasModulate/ShopManager/UI/Panel/shopList" to="CanvasModulate/ShopManager" method="_on_item_selected"]
[connection signal="pressed" from="CanvasModulate/ShopManager/UI/Panel/BuyButton" to="CanvasModulate/ShopManager" method="_on_buy_button_pressed"]
[connection signal="pressed" from="CanvasModulate/ShopManager/UI/Panel/SellButton" to="CanvasModulate/ShopManager" method="_on_sell_button_pressed"]
